--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.1",
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.8",
     "next": "15.5.4",
     "react": "19.1.0",
