Agregue adaptabilidad a la mayoria de paginas, solo hace falta del panel admin pero eso lo hare cuando este implementada la base de datos y sea completamnete funcional

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,7 @@
     "**/*.tsx",
     "next-env.d.ts",
     ".next/types/**/*.ts"
-  ],
+, "app/panelAdmin/components"  ],
   "exclude": [
     "node_modules"
   ]
