--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "bootstrap": "^5.3.8",
     "framer-motion": "^12.23.24",
     "next": "^15.5.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-type-animation": "^3.2.0",
     "three": "^0.180.0"
   },
   "devDependencies": {
@@ -25,12 +26,12 @@
     "@tailwindcss/postcss": "^4",
     "@types/estree": "^1.0.8",
     "@types/json-schema": "^7.0.15",
-    "@types/node": "^20.19.22",
+    "@types/node": "^20.19.23",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5.9.3"
   }
 }
