--- a/package.json
+++ b/package.json
@@ -11,15 +11,23 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.1",
     "@popperjs/core": "^2.11.8",
+    "@react-google-maps/api": "^2.20.7",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
     "bootstrap": "^5.3.8",
+    "clsx": "^2.1.1",
+    "flubber": "^0.4.2",
     "framer-motion": "^12.23.24",
     "next": "^15.5.6",
     "react": "^19.1.0",
+    "react-awesome-reveal": "^4.3.1",
+    "react-collapse": "^5.1.1",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-spring": "^10.0.3",
     "react-tsparticles": "^2.12.2",
     "react-type-animation": "^3.2.0",
+    "react-use-measure": "^2.1.7",
     "three": "^0.180.0"
   },
   "devDependencies": {
@@ -29,7 +37,9 @@
     "@types/json-schema": "^7.0.15",
     "@types/node": "^20.19.23",
     "@types/react": "^19.2.2",
+    "@types/react-collapse": "^5.0.4",
     "@types/react-dom": "^19.2.2",
+    "@types/react-icons": "^2.2.7",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "tailwindcss": "^4",
