--- a/package.json
+++ b/package.json
@@ -11,23 +11,30 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.1",
     "@popperjs/core": "^2.11.8",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@react-google-maps/api": "^2.20.7",
+    "@react-oauth/google": "^0.12.2",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
     "bootstrap": "^5.3.8",
     "clsx": "^2.1.1",
+    "firebase": "^12.4.0",
     "flubber": "^0.4.2",
     "framer-motion": "^12.23.24",
+    "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.548.0",
     "next": "^15.5.6",
     "react": "^19.1.0",
     "react-awesome-reveal": "^4.3.1",
     "react-collapse": "^5.1.1",
+    "react-datepicker": "^8.8.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-spring": "^10.0.3",
     "react-tsparticles": "^2.12.2",
     "react-type-animation": "^3.2.0",
     "react-use-measure": "^2.1.7",
+    "tailwind-merge": "^3.3.1",
     "three": "^0.180.0"
   },
   "devDependencies": {
@@ -40,6 +47,7 @@
     "@types/react-collapse": "^5.0.4",
     "@types/react-dom": "^19.2.2",
     "@types/react-icons": "^2.2.7",
+    "@types/react-select": "^5.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "tailwindcss": "^4",
