--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "^15.5.6",
     "react": "^19.1.0",
     "react-awesome-reveal": "^4.3.1",
+    "react-calendar": "^6.0.0",
     "react-collapse": "^5.1.1",
     "react-datepicker": "^8.8.0",
     "react-dom": "^19.1.0",
