--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-datepicker": "^8.8.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-qr-code": "^2.0.18",
     "react-spring": "^10.0.3",
     "react-tsparticles": "^2.12.2",
     "react-type-animation": "^3.2.0",
