--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-tsparticles": "^2.12.2",
     "react-type-animation": "^3.2.0",
     "react-use-measure": "^2.1.7",
+    "recharts": "^3.3.0",
     "tailwind-merge": "^3.3.1",
     "three": "^0.180.0"
   },
