--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.1",
+    "@fullcalendar/core": "^6.1.19",
+    "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/interaction": "^6.1.19",
+    "@fullcalendar/react": "^6.1.19",
     "@popperjs/core": "^2.11.8",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@react-google-maps/api": "^2.20.7",
@@ -18,12 +22,17 @@
     "@react-three/fiber": "^9.4.0",
     "bootstrap": "^5.3.8",
     "clsx": "^2.1.1",
+    "dom-to-image": "^2.6.0",
+    "file-saver": "^2.0.5",
     "firebase": "^12.4.0",
     "flubber": "^0.4.2",
     "framer-motion": "^12.23.24",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.548.0",
     "next": "^15.5.6",
+    "qrcode": "^1.5.4",
     "react": "^19.1.0",
     "react-awesome-reveal": "^4.3.1",
     "react-calendar": "^6.0.0",
@@ -43,9 +52,12 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/dom-to-image": "^2.6.7",
     "@types/estree": "^1.0.8",
     "@types/json-schema": "^7.0.15",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^20.19.23",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "^19.2.2",
     "@types/react-collapse": "^5.0.4",
     "@types/react-dom": "^19.2.2",
