--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,46 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# ==========================
+# Node / Monorepo
+# ==========================
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+package-lock.json
+pnpm-lock.yaml
+*.log
 
-# env files (can opt-in for committing if needed)
-.env*
+# ==========================
+# Next.js (frontend)
+# ==========================
+.next/
+out/
+.vercel/
+.turbo/
 
-# vercel
-.vercel
+# Env files (NUNCA subir claves)
+.env
+.env.local
+.env.development.local
+.env.production.local
+.env.test.local
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# ==========================
+# Server (backend)
+# ==========================
+server/node_modules/
+server/.env
+server/.env.local
+
+# PM2 / procesos
+pids
+*.pid
+*.seed
+
+# ==========================
+# SO / Editor
+# ==========================
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
+*.swp
