--- a/server/package.json
+++ b/server/package.json
@@ -1,22 +1,19 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "Backend para clínica estética con Express, Firebase y MySQL",
   "main": "src/index.js",
+  "type": "commonjs",
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "firebase-admin": "^13.5.0",
     "mysql2": "^3.15.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.11"
   }
 }
