--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,16 @@
   "main": "src/index.js",
   "type": "commonjs",
   "scripts": {
+    "dev": "nodemon src/index.js",
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "build": "echo \"No build step for this server\""
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "firebase-admin": "^13.5.0",
-    "mysql2": "^3.15.2"
+    "mysql2": "^3.15.2",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
