Seguridad: roles, auth y blindaje backend

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ package-lock.json
 pnpm-lock.yaml
 *.log
 
+firebase-service-account.json
+
 # ==========================
 # Next.js (frontend)
 # ==========================
