--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "bootstrap": "^5.3.8",
     "clsx": "^2.1.1",
     "dom-to-image": "^2.6.0",
+    "dotenv": "^17.2.3",
     "file-saver": "^2.0.5",
-    "firebase": "^12.4.0",
+    "firebase": "^12.8.0",
     "flubber": "^0.4.2",
     "framer-motion": "^12.23.24",
     "jspdf": "^3.0.3",
@@ -33,6 +34,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.548.0",
     "next": "^15.5.6",
+    "pg": "^8.18.0",
     "qrcode": "^1.5.4",
     "react": "^19.1.0",
     "react-awesome-reveal": "^4.3.1",
